[gd_scene load_steps=4 format=3 uid="uid://783gwo3dqpdk"]

[ext_resource type="Script" path="res://EndSequence.gd" id="1_end_sequence"]
[ext_resource type="AudioStream" uid="uid://b4rdbp8jclhcw" path="res://Audio/Incoming message sound.wav" id="2_incoming_message"]
[ext_resource type="AudioStream" uid="uid://lgqkg5jwwgdy" path="res://Audio/Confirm sound.mp3" id="3_confirm_sound"]

[node name="EndSequence" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_end_sequence")

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AsciiArtLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "ASCII art will be set by script"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -100.0
offset_right = 323.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][b][color=#00ff00][font_size=50]Produced by Wenye Zhou[/font_size][/color][/b][/center]"

[node name="IncomingMessageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_incoming_message")

[node name="ConfirmSoundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_confirm_sound")
